finalize player lobby

--- a/public/admin/clubs/live_match.html
+++ b/public/admin/clubs/live_match.html
@@ -54,7 +54,7 @@
 						<img class="live-match-lobby-player-img" alt="img" src="../../img/dan02.jpg">
 					</p>
 				</div>
-			<script type="text/javascript" src="liveLobby.js"> </script>
+			<script type="text/javascript" src="/~levko/js/liveLobby.js"> </script>
 			</div>
 		</div>
     </body>
