live-match-lobby photos bug

--- a/public/admin/clubs/finished_match.html
+++ b/public/admin/clubs/finished_match.html
@@ -18,7 +18,7 @@
 				<div class="live-match-lobby-player">
 					<span class="live-match-lobby-player-name"><?=$player1?></span>
 					<p>
-						<img class="live-match-lobby-player-img" alt="img" src="../../img/lev.jpg">
+						<img class="live-match-lobby-player-img" alt="img" src="<?=PLAYER_IMG.$img1?>">
 					</p>
 				</div>
 				<div class="live-match-lobby-frame-section">
@@ -40,7 +40,7 @@
 				<div class="live-match-lobby-player">
 					<span class="live-match-lobby-player-name"><?=$player2?></span>
 					<p>
-						<img class="live-match-lobby-player-img" alt="img" src="../../img/dan02.jpg">
+						<img class="live-match-lobby-player-img" alt="img" src="<?=PLAYER_IMG.$img2?>">
 					</p>
 				</div>
 			    <script type="text/javascript" src="finishedLobby.js"> </script>
