--- a/public/admin/clubs/live_match.html
+++ b/public/admin/clubs/live_match.html
@@ -18,7 +18,7 @@
 				<div id="leftPlayer" class="<?=$player1class?>">
 					<span class="live-match-lobby-player-name"><?=$player1?></span>
 					<p>
-						<img class="live-match-lobby-player-img" alt="img" src="../../img/lev.jpg">
+						<img class="live-match-lobby-player-img" alt="img" src="<?=PLAYER_IMG.$img1?>">
 					</p>
 				</div>
 				<div class="live-match-lobby-frame-section">
@@ -51,7 +51,7 @@
 				<div id="rightPlayer" class="<?=$player2class?>">
 					<span class="live-match-lobby-player-name"><?=$player2?></span>
 					<p>
-						<img class="live-match-lobby-player-img" alt="img" src="../../img/dan02.jpg">
+						<img class="live-match-lobby-player-img" alt="img" src="<?=PLAYER_IMG.$img2?>">
 					</p>
 				</div>
 			<script type="text/javascript" src="/~levko/js/liveLobby.js"> </script>
