modify table lobby and club lobby

--- a/public/admin/clubs/finished_match.html
+++ b/public/admin/clubs/finished_match.html
@@ -32,6 +32,7 @@
 					</p>
 				</div>
 				<div class="live-match-lobby-frame-section">
+					<div class="margin-b_50"></div>
 					<table class="live-match-lobby-frame-table">
 						<tbody>
 							<tr>
@@ -42,8 +43,6 @@
 							<tr class="live-match-lobby-frame-details">
 								<td colspan="3">Best of <?=$bestOf?></td>
 							</tr>
-							<h3>PRESS ENTER</br>TO START NEXT MATCH</h3></br>
-							<h3>OR ESC TO LEAVE THIS MATCH</h3>
 						</tbody>
 					</table>
 				</div>
@@ -54,6 +53,14 @@
 					</p>
 				</div>
 			    <script type="text/javascript" src="finishedLobby.js"> </script>
+			</div>
+			<div class="button_push">
+				<span>
+					Натисніть ESC щоб покинути матч
+				</span>
+				<span>
+					Натисніть ENTER щоб почати наступний матч в турнірі
+				</span>
 			</div>
 		</div>
     </body>
