--- a/public/admin/clubs/live_match.html
+++ b/public/admin/clubs/live_match.html
@@ -98,10 +98,7 @@
 </script>
 			<div class="button_push">
 				<span>
-					Натисніть <i class="fas fa-power-off"></i> щоб піти на хуй
-				</span>
-				<span>
-					Натисніть <i class="fas fa-swimmer"></i> щоб піти поплавати
+					Натисніть ESC щоб закінчити фрейм
 				</span>
 			</div>
 		</div>
