another huge commit. my bad

--- a/public/admin/clubs/live_match.html
+++ b/public/admin/clubs/live_match.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="live-match-lobby-table">
 			<h3 class="live-match-lobby-info">
-				<?=$matchInfo?> - Зустріч <?=$matchNum?>
+				Зустріч #<?=$matchNum?> | <?=$matchInfo?>
 			</h3>
 			<div class="live-match-lobby-player-table">
 				<div id="leftPlayer" class="<?=$player1class?>">
